# weld

./: .bazelignore  .bazelrc  .gitignore  .markdownlint.json  .markdownlintignore  BUILD.bazel  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MODULE.bazel  NOTICE  README.md  SECURITY.md  install.sh
cortex/: BUILD.bazel  README.md  __init__.py  __main__.py  _git.py  _init_ros2.py  _yaml.py  bootstrap.py  brief.py  cli.py  compat.py  contract.py  diff.py  discover.py  discovery_state.py  doctor.py  export.py  file_index.py  graph.py  init.py  init_detect.py  mcp_helpers.py  mcp_server.py  migrate.py  prime.py  pyproject.toml  query_index.py  ranking.py  repo_boundary.py  scaffold.py  synonyms.py  trace.py  warnings.py
cortex/bench/: BUILD.bazel  __init__.py  __main__.py  bench_cli.py  quality.py  runner.py
cortex/docs/: agent-workflow.md  bench-results.md  glossary.md  onboarding.md  strategy-cookbook.md
cortex/languages/: BUILD.bazel  cpp.yaml  cpp_ros2.yaml  go.yaml  python_ros2.yaml  rust.yaml
cortex/strategies/: BUILD.bazel  _helpers.py  _ros2_cpp.py  _ros2_py.py  bazel.py  boundary_entrypoint.py  compose.py  config_file.py  cpp_resolver.py  deploy_surface.py  dockerfile.py  events.py  events_bindings.py  events_callsite.py  events_config.py  events_shared.py  fastapi.py  firstline_md.py  frontmatter_md.py  gh_workflow.py  grpc_bindings.py  grpc_proto.py  grpc_proto_parser.py  http_client.py  manifest.py  markdown.py  pydantic.py  python_callgraph.py  python_module.py  ros2_cmake.py  ros2_interfaces.py  ros2_launch.py  ros2_package.py  ros2_topology.py  runbook.py  runtime_contract.py  sqlalchemy.py  tool_script.py  tree_sitter.py  typescript_exports.py  (+2 more)
cortex/templates/: BUILD.bazel  cortex_cmd_claude.md  cortex_readme.md  cortex_skill_codex.md  cortex_skill_copilot.md  external_adapter.py  local_strategy.py
cortex/tests/: BUILD.bazel  cortex_accept_events_test.py  cortex_accept_grpc_test.py  cortex_accept_http_test.py  cortex_accept_polyglot_test.py  cortex_accept_ros2_test.py  cortex_agent_workflow_doc_test.py  cortex_artifact_class_regression_test.py  cortex_bazel_strategy_test.py  cortex_bench_test.py  cortex_bootstrap_test.py  cortex_boundary_entrypoint_test.py  cortex_brief_acceptance_test.py  cortex_brief_cli_test.py  cortex_brief_test.py  cortex_brief_v2_test.py  cortex_callers_query_test.py  cortex_callgraph_treesitter_test.py  cortex_cli_docs_surface_test.py  cortex_confidence_discrimination_test.py  cortex_contract_interaction_test.py  cortex_contract_ros2_test.py  cortex_contract_test.py  cortex_cpp_resolver_test.py  cortex_cpp_treesitter_test.py  cortex_deploy_surface_strategy_test.py  cortex_description_coverage_test.py  cortex_diff_test.py  cortex_discover_test.sh  cortex_doc_authority_test.py  cortex_docs_validation_test.py  cortex_doctor_test.py  cortex_events_bindings_strategy_test.py  cortex_events_strategy_test.py  cortex_examples_test.py  cortex_export_test.py  cortex_external_json_acceptance_test.py  cortex_external_json_test.py  cortex_external_repo_discover_test.sh  cortex_external_repo_init_test.sh  (+49 more)
scripts/: BUILD.bazel  _demo_common.sh  create-monorepo-demo.sh  create-polyrepo-demo.sh  create_monorepo_demo_test.sh  create_polyrepo_demo_test.sh  demo_git_identity_failure_test.sh
weld/: BUILD.bazel  README.md  __init__.py  __main__.py  _agent_graph_constants.py  _agent_graph_edge_weights.py  _agent_graph_strict.py  _agent_graph_unused_skill.py  _alias_index.py  _cli_render.py  _contract_validators.py  _discover_empty_guard.py  _discover_federate.py  _discover_postprocess.py  _discover_recurse.py  _discover_strategies.py  _discover_summary.py  _doctor_agent_graph.py  _doctor_format.py  _doctor_optional.py  _doctor_strategies.py  _doctor_suppressions.py  _enrich_safe.py  _export_cli.py  _federation_validate.py  _git.py  _gitignore_scan.py  _gitignore_writer.py  _graph_cli.py  _graph_cli_parser.py  _graph_closure_invariants.py  _graph_doc_validators.py  _graph_node_registry.py  _graph_schema.py  _graph_stats.py  _graph_stats_cli.py  _graph_strategy_pair.py  _init_classify.py  _init_framework_scan.py  _init_go_imports.py  (+100 more)
weld/bench/: BUILD.bazel  __init__.py  __main__.py  bench_cli.py  primitives.py  quality.py  runner.py  synthetic_large_repo.py
weld/bench_tasks/: BUILD.bazel  __init__.py  compare.py  report.py  tasks.py
weld/cross_repo/: BUILD.bazel  __init__.py  base.py  compose_topology.py  grpc_service_binding.py  incremental.py  overrides.py  package_import_resolver.py  service_graph.py
weld/demos/: __init__.py
weld/docs/: agent-workflow.md  bench-results.md  glossary.md  onboarding.md  strategy-cookbook.md
weld/languages/: cpp.yaml  cpp_ros2.yaml  csharp.yaml  java.yaml  python.yaml  python_ros2.yaml  typescript.yaml
weld/providers/: __init__.py  anthropic.py  copilot_cli.py  ollama.py  openai.py
weld/strategies/: BUILD.bazel  _cpp_tree_sitter.py  _csharp_tree_sitter.py  _helpers.py  _java_tree_sitter.py  _ros2_cpp.py  _ros2_py.py  _tree_sitter_ids.py  _ts_call_graph.py  _ts_parse.py  bazel.py  boundary_entrypoint.py  compose.py  concept_from_bd.py  config_file.py  cpp_resolver.py  csharp.py  deploy_surface.py  dockerfile.py  events.py  events_bindings.py  events_callsite.py  events_config.py  events_shared.py  fastapi.py  firstline_md.py  frontmatter_md.py  gh_workflow.py  grpc_bindings.py  grpc_proto.py  grpc_proto_parser.py  http_client.py  java.py  manifest.py  markdown.py  pydantic.py  python_callgraph.py  python_module.py  python_package.py  ros2_cmake.py  (+13 more)
weld/templates/: BUILD.bazel  codex_mcp_config.toml  external_adapter.py  local_strategy.py  weld_cmd_claude.cli.md  weld_cmd_claude.md  weld_instructions_copilot.cli.md  weld_instructions_copilot.md  weld_readme.md  weld_skill_codex.cli.md  weld_skill_codex.md  weld_skill_copilot.cli.md  weld_skill_copilot.md
weld/tests/: BUILD.bazel  cpp_resolver_fakes.py  cross_repo_grpc_fixtures.py  diff_fixtures.py  discover_corrupt_graph_preserves_previous_test.py  discover_federate_test.py  discover_incremental_missing_outputs_test.py  examples_tests.bzl  (+270 more)
(+355 files in other folders)
