package(default_visibility = ["//visibility:public"])

# Exported so //tools:version_consistency_test can stage pyproject.toml in
# its runfiles and read the PEP 621 `version = "..."` field at test time.
# Keeping the export line-oriented (rather than a filegroup) mirrors the
# convention used by the repo root BUILD.bazel for VERSION and similar
# source-of-truth files.
exports_files(["pyproject.toml"])

filegroup(
    name = "module_entrypoint",
    # Both files are required so that `import weld` from an sh_test runfiles
    # tree resolves to a regular package (with __file__ set), not an implicit
    # namespace package. Without __init__.py Python treats the runfiles
    # weld/ directory as a namespace package and weld.__file__ becomes
    # None, which breaks any test that calls `Path(weld.__file__).parent`.
    srcs = [
        "__init__.py",
        "__main__.py",
    ],
)

py_library(
    name = "yaml",
    srcs = ["_yaml.py"],
)

py_library(
    name = "git",
    srcs = ["_git.py"],
)

py_library(
    name = "repo_boundary",
    srcs = ["repo_boundary.py"],
)

py_library(
    name = "glob_match",
    srcs = ["glob_match.py"],
    deps = [":repo_boundary"],
)

py_library(
    name = "contract",
    srcs = [
        "_contract_validators.py",
        "_federation_validate.py",
        "_graph_doc_validators.py",
        "_validate_diagnostics.py",
        "contract.py",
    ],
)

py_library(
    name = "workspace",
    srcs = [
        "_gitignore_scan.py",
        "workspace.py",
    ],
    deps = [":yaml"],
)

py_library(
    name = "runtime",
    srcs = [
        "__init__.py",
        "_discover_postprocess.py",
        "_discover_strategies.py",
        "_doctor_optional.py",
        "_doctor_strategies.py",
        "_enrich_safe.py",
        "_gitignore_scan.py",
        "_gitignore_writer.py",
        "_graph_cli.py",
        "_graph_schema.py",
        "_graph_stats.py",
        "_graph_stats_cli.py",
        "_agent_graph_constants.py",
        "_agent_graph_edge_weights.py",
        "_agent_graph_strict.py",
        "_agent_graph_unused_skill.py",
        "_init_classify.py",
        "_init_framework_scan.py",
        "_init_go_imports.py",
        "_init_ros2.py",
        "_staleness.py",
        "_workspace_bootstrap.py",
        "_workspace_inspect.py",
        "_workspace_lock.py",
        "arch_lint.py",
        "arch_lint_boundary.py",
        "arch_lint_custom.py",
        "arch_lint_cycles.py",
        "agent_graph_assets.py",
        "agent_graph_authority.py",
        "agent_graph_authority_audit.py",
        "agent_graph_audit.py",
        "agent_graph_cli.py",
        "agent_graph_discovery.py",
        "agent_graph_inventory.py",
        "agent_graph_materialize.py",
        "agent_graph_metadata.py",
        "agent_graph_metadata_utils.py",
        "agent_graph_plan.py",
        "agent_graph_render.py",
        "agent_graph_render_cli.py",
        "agent_graph_render_pairs.py",
        "agent_graph_render_writer.py",
        "agent_graph_storage.py",
        "bm25.py",
        "bootstrap.py",
        "bootstrap_managed.py",
        "bootstrap_writer.py",
        "brief.py",
        "cli.py",
        "demo.py",
        "demos/__init__.py",
        "diff.py",
        "_discover_empty_guard.py",
        "_discover_federate.py",
        "_discover_recurse.py",
        "discover.py",
        "discovery_state.py",
        "doctor.py",
        "enrich.py",
        "enrich_edges.py",
        "embeddings.py",
        "export.py",
        "federation.py",
        "federation_root.py",
        "federation_support.py",
        "federation_tools.py",
        "file_index.py",
        "graph.py",
        "graph_context.py",
        "graph_query.py",
        "impact.py",
        "init.py",
        "init_detect.py",
        "init_detect_constants.py",
        "init_workspace.py",
        "_mcp_guard.py",
        "_mcp_tools.py",
        "_security_mcp.py",
        "_security_posture.py",
        "mcp_config.py",
        "mcp_helpers.py",
        "mcp_server.py",
        "prime.py",
        "providers/__init__.py",
        "providers/anthropic.py",
        "providers/ollama.py",
        "providers/openai.py",
        "_query_sidecar.py",
        "query_state.py",
        "query_index.py",
        "ranking.py",
        "scaffold.py",
        "security.py",
        "serializer.py",
        "synonyms.py",
        "trace.py",
        "viz/__init__.py",
        "viz/adapter.py",
        "viz/api.py",
        "viz/server.py",
        "warnings.py",
        "watch.py",
        "workspace.py",
        "workspace_state.py",
    ],
    data = [
        "//weld/templates",
        "demos/scripts/_demo_common.sh",
        "demos/scripts/create-monorepo-demo.sh",
        "demos/scripts/create-polyrepo-demo.sh",
        "viz/static/app.js",
        "viz/static/index.html",
        "viz/static/styles.css",
        "viz/static/vendor/cytoscape-3.33.2.LICENSE",
        "viz/static/vendor/cytoscape-3.33.2.min.js",
    ],
    deps = [
        ":contract",
        ":git",
        ":glob_match",
        ":repo_boundary",
        ":yaml",
        "//weld/cross_repo",
        "//weld/strategies",
    ],
)

py_binary(
    name = "cli",
    srcs = ["__main__.py"],
    main = "__main__.py",
    deps = [
        ":runtime",
        "//weld/bench:bench_lib",
    ],
)
