package(default_visibility = ["//visibility:public"])

filegroup(
    name = "templates",
    srcs = [
        "external_adapter.py",
        "cortex_cmd_claude.md",
        "cortex_readme.md",
        "cortex_skill_codex.md",
        "cortex_skill_copilot.md",
        "local_strategy.py",
    ],
)
