package(default_visibility = ["//visibility:public"])

py_library(
    name = "helpers",
    srcs = ["_helpers.py"],
    deps = [
        "//weld:glob_match",
        "//weld:repo_boundary",
    ],
)

py_library(
    name = "strategies",
    srcs = [
        "__init__.py",
        "_cpp_tree_sitter.py",
        "_csharp_tree_sitter.py",
        "_java_tree_sitter.py",
        "bazel.py",
        "boundary_entrypoint.py",
        "compose.py",
        "concept_from_bd.py",
        "config_file.py",
        "csharp.py",
        "cpp_resolver.py",
        "deploy_surface.py",
        "dockerfile.py",
        "events.py",
        "events_bindings.py",
        "events_callsite.py",
        "events_config.py",
        "events_shared.py",
        "fastapi.py",
        "firstline_md.py",
        "frontmatter_md.py",
        "gh_workflow.py",
        "java.py",
        "grpc_bindings.py",
        "grpc_proto.py",
        "grpc_proto_parser.py",
        "http_client.py",
        "manifest.py",
        "markdown.py",
        "pydantic.py",
        "python_callgraph.py",
        "python_module.py",
        "python_package.py",
        "_ros2_cpp.py",
        "_ros2_py.py",
        "ros2_cmake.py",
        "ros2_interfaces.py",
        "ros2_launch.py",
        "ros2_package.py",
        "ros2_topology.py",
        "runbook.py",
        "runtime_contract.py",
        "sqlalchemy.py",
        "test_peer.py",
        "_ts_call_graph.py",
        "_ts_parse.py",
        "_tree_sitter_ids.py",
        "tool_script.py",
        "tree_sitter.py",
        "typescript_exports.py",
        "worker_stage.py",
        "yaml_meta.py",
    ],
    data = [
        "//weld/languages:query_files",
    ],
    deps = [
        ":helpers",
        "//weld:glob_match",
        "//weld:node_ids",
        "//weld:repo_boundary",
        "//weld:yaml",
    ],
)
