package(default_visibility = ["//visibility:public"])

filegroup(
    name = "templates",
    srcs = [
        "codex_mcp_config.toml",
        "external_adapter.py",
        "weld_cmd_claude.md",
        "weld_readme.md",
        "weld_skill_codex.md",
        "weld_skill_copilot.md",
        "local_strategy.py",
    ],
)
